--- a/src/content/blog/llm-workflow.mdx
+++ b/src/content/blog/llm-workflow.mdx
@@ -1,39 +1,37 @@
 ---
-title: 'My LLM Codegen Workflow'
-description: 'A practical guide to using LLMs for efficient software development'
-date: '2025-02-16'
+title: 'TITLE（题目）'
+description: 'description（描述）'
+date: '2025-03-16（日期）'
 ---
 
-# My LLM Codegen Workflow
+# 一级标题
 
-tl;dr; Brainstorm spec, then plan a plan, then execute using LLM codegen. Discrete loops. Then magic. ✩₊˚.⋆☾⋆⁺₊✧
+内容，Then magic. ✩₊˚.⋆☾⋆⁺₊✧
 
-## The Process
+## 二级标题
 
-Here's my current workflow for using LLMs in software development. It's built upon personal experience and conversations with fellow developers. Note that in the fast-moving world of AI, what works today might need adjustment tomorrow.
+内容
 
-### Step 1: Idea Refinement
+### 三级标题
 
-Start with a conversational LLM (like ChatGPT-4) and use this prompt:
-
-```
-Ask me one question at a time so we can develop a thorough, step-by-step spec for this idea. Each question should build on my previous answers, and our end goal is to have a detailed specification I can hand off to a developer. Let's do this iteratively and dig into every relevant detail. Remember, only one question at a time.
-
-Here's the idea: <Your Idea>
-```
-
-After the brainstorming concludes, ask for a comprehensive spec:
+内容
 
 ```
-Now that we've wrapped up the brainstorming process, can you compile our findings into a comprehensive, developer-ready specification? Include all relevant requirements, architecture choices, data handling details, error handling strategies, and a testing plan.
+画框写内容或代码
 ```
 
-Save this as `spec.md` in your repo. This spec can be used for multiple purposes:
-- Code generation
-- Idea validation
-- White paper generation
-- Business model creation
-- Deep research foundation
+内容
+
+```
+画框写内容或代码
+```
+
+内容 ‘TEXT’是空格的意思
+- 内容  ”-“是圆点的意思
+- 内容
+- 内容
+- 内容
+- 内容
 
 ### Step 2: Planning
 
